2009-03-09  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/javascript/pandora.js: Moved agent_changed here from map_builder
	because it's quite a useful function.
	
	* include/functions_visual_map.php: In case you want no labels (a lot of
	icons on a graph) just set the color to anything not starting with #
	
	* godmode/reporting/map_builder_wizard.php: Added the possibility to add
	modules as well using the wizard. Very useful if you have a switch.
	
	* godmode/reporting/map_builder.php: Fixed some issues with the ajax thing
	and fixed issue #2527894.

2009-03-05  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/reporting/map_builder_wizard.php: Fixed small error when no
	valid id was passed.
	
	* godmode/reporting/map_builder.php: Modified code so that width and
	height can be specified for all types of graphics. Fixed code where
	width and height wouldn't be passed in the database

2009-03-05  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/auth/dev.php: Updated examples
	
	* include/auth/ldap.php: Moved stuff in a more logical order
	and globalized $ldap_cache since now it is called from a function
	so it needs not be local

2009-03-05  Sancho Lerena  <slerena@artica.es>

	*  include/functions_reporting.php: Fixed notice.

2009-03-05  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/auth/ldap.php: Fixed a small issue to check on a variable
	
	* include/functions_extensions.php: Fixed an issue since errors 
	produced with @function will filter into custom error handlers
	
	* include/functions_ui.php: Added RSS link in the header to display
	RSS feed availability in RSS-enabled browsers
	
	* operation/events/events_marquee.php, 
	operation/events/events_statistics.php: require_once so it won't load
	the same function files twice
	
	* operation/events/events_rss.php: Better error handling. Require_once
	required because it was giving a problem with certain function files.	

2009-03-05  Esteban Sanchez  <estebans@artica.es>
