@@ -277,9 +277,9 @@ if (! $edit_layout && ! $id_layout) {
 			
 			$data[0] = '<a href="index.php?sec=greporting&amp;sec2=godmode/reporting/map_builder&amp;id_layout='.$map['id'].'">'.$map['name'].'</a>';
 			
-			$data[1] = print_image ("images/".get_group_icon ($map['id_group']).'.png', true).'&nbsp;';
+			$data[1] = print_group_icon ($map['id_group'], true).'&nbsp;';
 			$data[1] .= get_group_name ($map['id_group']);
-			$data[2] = get_db_sql ("SELECT COUNT(id) FROM tlayout_data WHERE id_layout = ".$map['id']);
+			$data[2] = get_db_sql ("SELECT COUNT(*) FROM tlayout_data WHERE id_layout = ".$map['id']);
 			$data[3] = '<a href="index.php?sec=greporting&amp;sec2=godmode/reporting/map_builder_wizard&amp;id_layout='.$map['id'].'">'.print_image ("images/pill.png", true).'</a>';
 			
 			$data[4] = '<a href="index.php?sec=greporting&amp;sec2=godmode/reporting/map_builder&amp;id_layout='.$map['id'].'&amp;delete_layout=1">'.print_image ("images/cross.png", true).'</a>';
